# ClaudeModelBridge

./: .gitignore  .replit  EVENT_STORE_README.md  MCP_Tools.py  OAUTH_DOCUMENTATION.md  README.md  README_CLAUDE_MCP.md  README_MCP_SETUP.md  README_UUID_FIX.md  app.py  claude_mcp_config.json  claude_mcp_config_final.json  cookies.txt  create_sample_tools.py  custom_server.py  custom_server.py2  docker-compose.yml  event_store.py  event_store.py2  event_store_config.py  event_store_migrations.py  example_event_store.py  flask_wrapper.py  http_server.py.backup  main.py  main.py.backup  main_mcp_direct.py  mcp_claude_server.py  mcp_client.py  mcp_config.json  mcp_direct_server.py  mcp_http_bridge.py  mcp_official_server.py  mcp_server.py  mcp_server.py.backup  mcp_streamable_server.py  memory.db  migrate_memory_data.py  models.py  oauth2_manager.py  (+13 more)
Data/: .env.example  .gitignore  Build.sh  Dockerfile  MCP_Tools.py  README.md  config.py  custom_server.py  main.py  oauth2.py  pytest.ini  requirements.txt
Data/tests/: test_event_store.py  test_mcp_tools.py  test_oauth2.py
Tools/: FileSystem.py  FileSystem_improved.py  Git.py  Memory.py  Memory_fixed.py  SSH.py  System.py  memory.db
admin/: __init__.py  admin_api.py  admin_auth.py  admin_routes.py  middleware.py
instance/: mcp_server.db
oauth2_modules/: __init__.py  example_usage.py  oauth2_auth.py  oauth2_client.py  oauth2_database.py  oauth2_endpoints.py  oauth2_manager.py  oauth2_tokens.py
templates/: api_docs.html  base.html  index.html  logs.html  oauth_register.html  oauth_register_success.html  tools.html
(+12 files in other folders)
