[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-socketio>=5.5.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
    "flask-cors>=6.0.0",
    "requests>=2.32.3",
    "werkzeug>=3.1.3",
    "python-socketio>=5.13.0",
    "eventlet>=0.40.0",
    "mcp>=1.9.2",
]
