[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-socketio>=5.5.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
    "flask-cors>=6.0.0",
    "requests>=2.32.3",
    "werkzeug>=3.1.3",
    "python-socketio>=5.13.0",
    "eventlet>=0.40.0",
    "mcp>=1.9.2",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.3",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "psutil>=7.0.0",
    "pydantic>=2.11.5",
    "cryptography>=45.0.3",
    "pyjwt>=2.10.1",
    "anyio>=4.9.0",
    "click>=8.2.1",
    "starlette>=0.46.2",
    "pydantic-settings>=2.9.1",
]
